--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
   text-align: center;
 }
 
-* {
+*, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
